Initial wonky fill-in-the-part-of-speech, hooray

--- a/madlibs-vercel-sdk/src/app/globals.css
+++ b/madlibs-vercel-sdk/src/app/globals.css
@@ -5,12 +5,14 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --accent: #640;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --accent: #fd8;
   }
 }
 
@@ -20,5 +22,12 @@ body {
   font-family: sans-serif;
   input {
     color: var(--background);
+  }
+}
+
+.madlib {
+  strong {
+    color: var(--accent);
+    font-size: 110%;
   }
 }
