--- a/madlibs-vercel-sdk/src/app/globals.css
+++ b/madlibs-vercel-sdk/src/app/globals.css
@@ -3,16 +3,23 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #ddd;
   --foreground: #171717;
-  --accent: #640;
+  --accent: #a70;
+  --card: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #222;
     --foreground: #ededed;
     --accent: #fd8;
+    --card: #000;
+  }
+  input {
+    background: var(--foreground);
+    color: var(--background);
+    /*color: var(--accent);*/
   }
 }
 
@@ -21,7 +28,12 @@ body {
   background: var(--background);
   font-family: sans-serif;
   input {
-    color: var(--background);
+    /*background: var(--foreground);*/
+    /*color: var(--background);*/
+    /*color: var(--accent);*/
+  }
+  .card {
+    background: var(--card);
   }
 }
 
